consumer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rahti-weather-consumer
  labels:
    app: rahti-weather-consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rahti-weather-consumer
  template:
    metadata:
      labels:
        app: rahti-weather-consumer
    spec:
      containers:
      - name: rahti-weather-consumer
        # Replace <namespace> with your OpenShift project name, or use the
        # external registry URL image-registry.apps.2.rahti.csc.fi/<namespace>/rahti-weather:latest
        image: image-registry.openshift-image-registry.svc:5000/testproject-4/rahti-weather:latest
        ports:
        - containerPort: 8082
          name: consumer
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
